--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -6,10 +6,10 @@
 body{
     font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
     font-size:12px;
-    background-color:#eaeaea;
+    background-color:#e5fadc;
 }
 #content {
-    background-color:white;
+    background-color:#e5fadc;
     line-height:1.5;
     width:540px;
     padding:20px;
@@ -34,9 +34,9 @@ h2{
     <p>本アプリで取得するユーザー情報と目的は以下のとおりです。</p>
     <p>＜取得するユーザー情報＞</p>
     <p>（１）端末に関する情報</p>
-    <ul><li>デバイストークン</li>
+    <ul><li>デバイストークン</li></ul>
     <p>（２）位置情報</p>
-        <li>GPSに基づいた緯度経度</li></ul>
+    <ul><li>GPSに基づいた緯度経度</li></ul>
     
     <p>＜デバイストークンの取得目的＞</p>
     <p>プッシュ通知を受信する際に利用します。災害情報危険度ランク受信や避難支援サービスポータルを利用している施設管理者や自治体が避難訓練を行う際にデバイストークンが必要となります。</p>
@@ -79,5 +79,5 @@ h2{
     <h2>第７条　お問い合せ</h2>
     <p>運営者のプライバシーポリシーに関する、ご意見、ご質問、苦情の申出その他ユーザー情報の取扱いに関するお問い合わせは、以下の窓口にご連絡ください。</p>
     <p>株式会社エヴァーグリーン　システムソリューション事業部　避難支援担当</p>
-    <p>E-mail：furukubo@ever-g.co.jp（24時間受付、返信可能時間：平日9:00～17:00）</p>
+    <p>URL：https://ever-g.co.jp/wp/contact/（24時間受付、返信可能時間：平日9:00～17:00）</p>
 </div></body></html>
